force-app/main/default/objects/Order_LineItem__c/Order_LineItem__c.object-meta.xml
<CustomObject>
    <label>Order LineItem</label>
    <nameField>
        <label>Order LineItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order LineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>