force-app/main/default/objects/Order_LineItem__c/fields/Length_UOM__c.field-meta.xml
<CustomField>
    <fullName>Length_UOM__c</fullName>
    <label>Length UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>