force-app/main/default/objects/Order_LineItem__c/fields/Order_Line_Item_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Order Line Item External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>