force-app/main/default/objects/Order_LineItem__c/fields/Order_Line_Row__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Row__c</fullName>
    <label>Order Line Row</label>
    <length>255</length>
    <type>Text</type>
</CustomField>