force-app/main/default/objects/Order_LineItem__c/fields/Order_Number_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Number_Id__c</fullName>
    <label>Order Number Id</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Order LineItems</relationshipLabel>
    <relationshipName>Order_LineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>