force-app/main/default/objects/Order_LineItem__c/fields/Slitting_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Slitting_Instructions__c</fullName>
    <label>Slitting Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>