force-app/main/default/objects/Order_LineItem__c/fields/Width_UOM__c.field-meta.xml
<CustomField>
    <fullName>Width_UOM__c</fullName>
    <label>Width UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>